<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:padding="30dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/Order_name_input2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/ad1"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/Customer_input2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/ad2"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/Month_number_input2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/ad3"
                android:inputType="number" />

            <EditText
                android:id="@+id/Day_number_input2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/ad4"
                android:inputType="number" />

            <EditText
                android:id="@+id/Warranty_input2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/ad5"
                android:inputType="number" />

            <EditText
                android:id="@+id/Payment_input2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/ad6"
                android:inputType="number" />

            <EditText
                android:id="@+id/Performance_input2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/ad7"
                android:inputType="number" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:text="@string/ad12"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:text="@string/ad13"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>